# spiel

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  404.html  CHANGELOG.md  CNAME  LICENSE  README.md  codecov.yml  generate_screenshots.py  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  sitemap.xml  synthfile
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: publish-docs.yml  publish-package.yml  publish-to-pypi.yml  publish.yml  quality-check.yml  test-code.yml  test-docker.yml
api/: index.html
assets/: style.css
changelog/: index.html
contributing/: index.html
docker/: Dockerfile  test.sh
docs/: api.md  changelog.md  conf.py  contributing.md  gallery.md  generate_screenshots.py  index.md  index.rst  presenting.md  quickstart.md  reference.rst  sandboxed-execution.md  slides.md  transitions.md
docs/assets/: style.css
docs/examples/: quickstart.py  triggers_animation.py
examples/: demo.py  many_slides.py  quickstart.py  slide_loop.py  slide_via_decorator.py  triggers_animation.py  triggers_reveal.py
gallery/: index.html
orate/: display.py  footer.py  input.py  main.py  slides.py  state.py
perf/: perf_demo.py  perf_image.py  perf_plot.py
presenting/: index.html
quickstart/: index.html
search/: search_index.json
slides/: index.html
spiel/: __init__.py  __main__.py  app.py  cli.py  constants.py  deck.py  example.py  exceptions.py  footer.py  help.py  image.py  input.py  load.py  main.py  modes.py  notebooks.py  options.py  plot.py  present.py  presentable.py  reloader.py  repls.py  rps.py  slide.py  slides.py  spiel.css  state.py  transition.py  triggers.py  utils.py
spiel/demo/: demo.py  notebook.ipynb
spiel/renderables/: debug.py  image.py  version.py
spiel/screens/: deck.py  help.py  screen.py  slide.py  transition.py
spiel/transitions/: protocol.py  swipe.py
spiel/widgets/: bindings.py  fixed_slide.py  footer.py  minislide.py  minislides.py  slide.py  version.py  widget.py
tests/: conftest.py  test_app.py  test_chunks.py  test_clamp.py  test_cli.py  test_deck.py  test_demo.py  test_display.py  test_footer.py  test_help.py  test_image.py  test_init.py  test_input.py  test_input_handlers.py  test_input_handling.py  test_joinify.py  test_load.py  test_options.py  test_reloader.py  test_rps.py  test_slide.py  test_slide_widget.py  test_state.py  test_swipe.py  test_triggers.py
tests/cli/: test_demo.py  test_help.py  test_present.py  test_version.py
tests/renderables/: test_image.py
tests/transitions/: conftest.py  test_swipe.py
tests/utils/: test_chunks.py  test_clamp.py  test_filter_join.py
tests/widgets/: test_slide_widget.py
transitions/: index.html
