[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py39", "py310"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 100

[tool.poetry]
name = "spiel"
version = "0.3.0"
description = "A framework for building and presenting richly-styled presentations in your terminal using Python."
readme="README.md"
homepage="https://github.com/JoshKarpel/spiel"
documentation="https://spiel.readthedocs.io/en/latest/"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Typing :: Typed"]
authors = ["JoshKarpel <josh.karpel@gmail.com>"]
license = "MIT"
include = ["py.typed", "demo/*"]

[tool.poetry.dependencies]
python = ">=3.9,<4"
rich = ">=12"
typer = ">=0.6"
watchdog = ">=2"
pendulum = ">=2"
Pillow = ">=8"
tomli = ">=2"
tomli-w = ">=1"
ipython = ">=7"
ipykernel = ">=5"

[tool.poetry.dev-dependencies]
pytest = ">=6"
pytest-watch = ">=4"
pytest-cov = ">=3"
pytest-xdist = ">=2"
mypy = ">=0.961"
pytest-mypy = ">=0.8"
pytest-mock = ">=3"
hypothesis = ">=6"

[tool.poetry.scripts]
spiel = 'spiel.main:app'

[tool.pytest.ini_options]
addopts = ["--strict-markers", "--mypy"]
testpaths = ["tests", "spiel"]
norecursedirs = ["demo"]

[tool.mypy]
pretty = false

files = ["spiel/*.py", "tests/*.py"]

exclude = "demo/"

check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
disallow_any_generics = true

warn_unused_configs = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
warn_redundant_casts = true

ignore_missing_imports = true
