[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "spiel"
version = "0.4.2"
description = "A framework for building and presenting richly-styled presentations in your terminal using Python."
readme="README.md"
homepage="https://github.com/JoshKarpel/spiel"
documentation="https://www.spiel.how"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Typing :: Typed"]
authors = ["JoshKarpel <josh.karpel@gmail.com>"]
license = "MIT"
include = ["py.typed", "demo/*", "spiel.css"]

[tool.poetry.dependencies]
python = ">=3.10,<4"
rich = ">=12"
typer = ">=0.6"
Pillow = ">=8"
textual = "==0.4.0"
watchfiles = ">=0.18"

[tool.poetry.group.dev.dependencies]
pytest = ">=7"
pytest-watch = ">=4"
pytest-cov = ">=3"
pytest-xdist = ">=2"
mypy = ">=0.982"
pytest-mypy = ">=0.10"
pytest-mock = ">=3"
hypothesis = ">=6"
textual = {extras = ["dev"], version = "==0.4.0"}
mkdocs = ">=1.4.2"
mkdocs-material = ">=8.5.10"
mkdocstrings = {extras = ["python"], version = ">=0.19.0"}

[tool.poetry.scripts]
spiel = 'spiel.cli:cli'

[tool.black]
line-length = 100
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 100

[tool.pycln]
all = true

[tool.pytest.ini_options]
addopts = ["--strict-markers", "--mypy", "-n", "auto"]
testpaths = ["tests", "spiel"]
norecursedirs = ["demo"]

[tool.mypy]
pretty = false
show_error_codes = true

files = ["spiel/**/*.py", "tests/**/*.py"]

check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
disallow_any_generics = true

warn_unused_configs = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
warn_redundant_casts = true

ignore_missing_imports = true
